# sunspot

./: .gitignore  .gitmodules  .goreleaser.yaml  INSTALLATION.md  LICENSE  README.md  acir_file_parser.go  build_noir_samples.sh  go.mod  go.sum  hello_world.go  hello_world_test.go  main.go
.github/workflows/: ci.yml  gnark-solana.yml  go.yml  noir-gnark.yml  release.yml
acir/: TestACIRRange_output.txt  acir.go  acir_circuit_parser.go  acir_file_header_parser.go  acir_test.go  assertion_payload.go  assertion_payload_test.go  binary_decoder.go  circuit.go  expression_or_memory.go  program.go  witness.go  witness_test.go
acir/black_box_func/: aes128encrypt.go  aes128encrypt_test.go  aes_tables.go  and.go  and_test.go  big_int_add.go  big_int_add_test.go  big_int_div.go  big_int_div_test.go  big_int_from_le_bytes.go  big_int_from_le_bytes_test.go  big_int_mul.go  big_int_mul_test.go  big_int_sub.go  big_int_sub_test.go  big_int_to_le_bytes.go  big_int_to_le_bytes_test.go  black_box_func_call.go  black_box_func_kind.go  blake2s.go  blake2s_test.go  blake3.go  blake3_test.go  ecdsa_secp256k1.go  ecdsa_secp256r1.go  embedded_curve_add.go  function_input.go  function_input_test.go  keccak_f1600.go  multi_scalar_mul.go  range.go  (+5 more)
acir_decoder/: acir_circuit_parser.go  acir_file_header_parser.go  assertion_payload.go  binary_decoder.go  circuit.go  expression_or_memory.go  expression_width.go  opcode_location.go  program.go  public_inputs.go
bn254/: bn254.go
cmd/: compile.go  prove.go  root.go  setup.go  verify.go
docs/: Gemfile  _config.yml  acir.md  acirtor1cs.md  commands.md  index.md  installation.md
gnark-solana/: Cargo.toml  README.md
gnark-solana/.github/workflows/: ci.yml
gnark-solana/crates/verifier-bin/: Cargo.toml  build.rs  default.vk
gnark-solana/crates/verifier-bin/src/: generated_vk.rs  lib.rs
gnark-solana/crates/verifier-bin/test_files/: sum_a_b.vk  xor.proof  xor.pw
gnark-solana/crates/verifier-lib/: Cargo.toml
gnark-solana/crates/verifier-lib/src/: commitments.rs  error.rs  hash.rs  lib.rs  proof.rs  verifier.rs  verifier_test.rs  vk.rs  witness.rs
gnark-solana/crates/verifier-lib/src/test_files/: keccak_f1600.proof  keccak_f1600.vk  sum_a_b.proof  sum_a_b.pw
gnark-solana/example/program/: Cargo.toml
gnark-solana/example/program/src/: lib.rs  vk.rs
go/: go.mod  main.go
noir-samples/: .gitignore
scripts/: ecdsa_sig_gen.py  regen_test_artifacts.sh
sw-grumpkin/: g1.go  hints.go
testgen/: Cargo.toml  README.md
testgen/src/: main.rs
testgen/src/acir_field/: mod.rs
testgen/src/black_box_func/: aes128encrypt.rs  and.rs  black_box_func_kind.rs  blake2s.rs  blake3.rs  ecdsa_secp256k1.rs  ecdsa_secp256r1.rs  function_input.rs  keccak_f1600.rs  multi_scalar_mul.rs  recursive_aggregation.rs  xor.rs
testgen/src/brillig/memory/: bitsize.rs  heap_array.rs  mod.rs  value_or_array.rs
testgen/src/brillig/opcodes/: binary_field_op.rs  conditional_mov.rs  foreign_call.rs  jump_if.rs  jump_if_not.rs  mod.rs  not.rs  stop.rs
testgen/src/expression/: expression_test_utils.rs  mod.rs
testgen/src/opcodes/: call.rs  memory_init.rs  memory_op.rs  mod.rs  opcode_location.rs
testgen/src/shared/: mod.rs  witness.rs
(+480 files in other folders)
