[workspace]
members = [
    "crates/verifier-lib",
    "crates/verifier-bin", "example/program",
]

resolver = "2"

[workspace.metadata.docs.rs]
# To build locally, use 
# RUSTDOCFLAGS="--html-in-header docs-header.html" cargo doc --no-deps --document-private-items --open
rustdoc-args = ["--html-in-header", "docs-header.html"]
cargo-args = ["--no-deps", "--document-private-items"]