[package]
name = "testgen"
version = "0.1.0"
edition = "2024"

[dependencies]
acir = { git = "https://github.com/noir-lang/noir", package = "acir", tag = "v1.0.0-beta.22" }
msgpack_tagged = { git = "https://github.com/noir-lang/noir", package = "msgpack_tagged", tag = "v1.0.0-beta.22" }
serde = { version = "1", features = ["derive"] }
clap = { "version" = "4.5.38", "features" = ["derive"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
