

[package]
name = "verifier-bin"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
solana-program = "3.0.0"
blake3 = { version = "1.8.2", default-features = false, features = ["pure"] }
verifier-lib = { path = "../verifier-lib" } 

[build-dependencies]
verifier-lib = { path = "../verifier-lib" }

[features]
custom-heap = []
custom-panic = []

[dev-dependencies]
litesvm = "0.6.1"
solana-sdk = "2.2.0"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(target_os, values("solana"))'] }