

[package]
name = "verifier-bin"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
solana-program = "3.0.0"
blake3 = { version = "1.8.2", default-features = false, features = ["pure"] }
gnark-verifier-solana = { path = "../verifier-lib" } 

[build-dependencies]
gnark-verifier-solana = { path = "../verifier-lib" }

[features]
custom-heap = []
custom-panic = []

[dev-dependencies]
litesvm = "0.6.1"
solana-sdk = "2.2.0"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(target_os, values("solana"))'] }